fixed nav gap on left/right to make nav span full width

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@
 }
 nav {
     position: fixed !important;
+    left: 0px !important;
+    right: 0px !important;
 }
 #navitem:hover {
     color: black !important;
